snapshots/truth__parse__abi__tests__trick_close_paren_in_string.snap
---
source: src/parse/abi.rs
expression: "expect_parse_error(\"unclosed\", r##\"S(enum=\")\"\"##).trim()"
---
error: missing closing parenthesis for attribute list
  ┌─ <input>:1:2
  │
1 │ S(enum=")"
  │  ^ unclosed parenthesis
